# TaticProject

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md
docs/: TreeFolder.docx  YeucauProject.docx  complie.txt
src/: CMakeLists.txt
src/Entities/Ship/: ShipEntity.h
src/core/: CMakeLists.txt  ConnectDialog.cpp  ConnectDialog.h
src/core/Config/: ConfigParser.cpp  ConfigParser.h
src/core/Entity/: Entity.cpp  Entity.h  Property.h  PropertyContainer.cpp  PropertyContainer.h
src/core/Manager/: EntityManager.cpp  EntityManager.h
